<resources>
    <string name="app_name">RIA DigiDoc</string>
    <string name="action_sign">Sign</string>
    <string name="insert_pin_puk">Insert PIN/PUK</string>
    <string name="settings">Settings</string>
    <string name="cert_read_failed">Cert read failed</string>
    <string name="current_pin_puk">Current PIN/PUK</string>
    <string name="connect">Connect</string>
    <string name="new_pin_puk">New PIN/PUK</string>
    <string name="change_puk">Change PUK</string>
    <string name="change_pin">Change PIN1</string>
    <string name="unblock_pin1">Unblock PIN1</string>
    <string name="change_pin2">Change PIN2</string>
    <string name="unblock_pin2">Unblock PIN2</string>
    <string name="counter_pin1">PIN1 counter</string>
    <string name="counter_pin2">PIN2 counter</string>
    <string name="counter_puk">PUK counter</string>
    <string name="title_activity_signing">Signing</string>
    <string name="title_activity_manage_eids">My eID-s</string>
    <string name="title_activity_pin_utilities">PIN activities</string>
    <string name="title_activity_browse_containers">Documents</string>
    <string name="title_activity_create_new_container">Container</string>
    <string name="action_settings">Settings</string>
    <string name="activity_browse_containers_yesterday">Yesterday</string>
    <string name="search">Search</string>
    <string name="title_activity_manage_container">Container</string>
    <string name="files">Files</string>
    <string name="addFile">Add</string>
    <string name="save">Save</string>
    <string name="bdoc_detail_title">Container</string>
    <string name="cancel_button">No</string>
    <string name="confirm_button">Yes</string>
    <string name="bdoc_remove_confirm_title">Deleting</string>
    <string name="bdoc_remove_confirm_message">Are you sure you want to delete file %s?</string>
    <string name="signatures_title">Signatures</string>
    <string name="file_location">Location: </string>
    <string name="file_info">Format: %1$s | Size: %2$s</string>
    <string name="file_size">Size: %s</string>
    <string name="files_title">Files</string>
    <string name="create_new">Create new</string>
    <string name="send">Send</string>
    <string name="signature_remove_confirm_message">Are you sure you want to delete %s signature?</string>
    <string name="signature_valid">valid</string>
    <string name="signature_invalid">not valid</string>
    <string name="close_button">Close</string>
    <string name="empty_container_files">There are no files added. Each digitally signed document must have content. To add files press \"Add\" button.</string>
    <string name="empty_container_signatures">There are no signatures added. You can add signature after at least one file is added.</string>
    <string name="add_file_remove_signatures">To be able to add files container must be unsigned</string>
    <string name="file_exists_message">File with same name already exists</string>
    <string name="file_name_empty_message">File can\'t be with empty name</string>
    <string name="select_file">Select File to Add</string>
    <string name="container_has_file_with_same_name">Container already contains file with the same name</string>
    <string name="file_saved">File saved</string>
    <string name="file_save_failed">File save failed</string>
    <string name="file_handler_error">No handler for this type of file</string>
    <string name="enter_pin2">Enter PIN2:</string>
    <string name="sign_button">OK</string>
    <string name="cancel">Cancel</string>
    <string name="enter_pin2_retries_left">Enter PIN2: (Retries left: %s)</string>
    <string name="pin_verification_failed">PIN is incorrect</string>
    <string name="already_signed_by_person">You already signed the container</string>
    <string name="upload_to">Send to…</string>
    <string name="card_not_provided">Card is not provided or there is some other problem with a card</string>
    <string name="file_remove_confirm_message">Are you sure you want to delete %s file from the container?</string>
    <string name="datafile_delete_not_allowed_signed">Can not remove a file from a signed container, remove all signatures before removing file.</string>
    <string name="datafile_delete_not_allowed_empty">Can not remove last file from container.</string>
    <string name="signature_is">Signature is\u0020</string>
    <string name="location">Location:\u0020</string>
    <string name="attachment_extract_failed">Failed to extract attachment from the container</string>
    <string name="file_unsharable">File of this type can not be shared.</string>
    <string name="openingFileFailed">Opening File Failed</string>
    <string name="save_container_no_files">Container needs to have at least 1 data file to save</string>
    <string name="title_activity_settings">Settings</string>
    <string name="no_connectivity_warning">Please connect to internet in order to sign</string>
    <string name="open_file_with">Open file with</string>
    <string name="developed_by">RIA DigiDoc app is developed by The Information System Authority.</string>
    <string name="pin2_changing">PIN2 changing</string>
    <string name="using_pin2_option">Using valid PIN2 code</string>
    <string name="using_puk_option">Using valid PUK code</string>
    <string name="pin2_info"><![CDATA[\u2022 must be different from previous PIN2\n\u2022 must be 5–12 digits long and can\'t contain letters.\n\u2022 can\'t be 00000, 12345 and can\'t contain your date of birth.]]></string>
    <string name="pin2_info_title">New PIN2 code:</string>
    <string name="using_pin1_option">Using valid PIN1 code</string>
    <string name="pin1_info_title">New PIN1 code:</string>
    <string name="pin1_info"><![CDATA[\u2022 must be different from previous PIN1\n\u2022 must be 4–12 digits long and can\'t contain letters.\n\u2022 can\'t be 0000, 1234 and can\'t contain your date of birth.]]></string>
    <string name="change">Change</string>
    <string name="new_pin2_title">New PIN2 code:</string>
    <string name="new_pin2_hint">New PIN2</string>
    <string name="new_pin2_again_hint">New PIN2 again</string>
    <string name="new_pin2_again_title">New PIN2 code again:</string>
    <string name="new_pin1_title">New PIN1 code:</string>
    <string name="new_pin1_hint">New PIN1</string>
    <string name="new_pin1_again_title">New PIN1 code again:</string>
    <string name="new_pin1_again_hint">New PIN1 again</string>
    <string name="pin1_changing">PIN1 change:</string>
    <string name="valid_pin_1">Current PIN1 code:</string>
    <string name="valid_pin_1_hint">PIN1</string>
    <string name="valid_puk">Current PUK code:</string>
    <string name="valid_puk_hint">PUK</string>
    <string name="pin1_blocked"><b>PIN1 is blocked.</b>\nTo unblock/change PIN1 use PUK code.</string>
    <string name="pin1_change_success">PIN1 changed successfully</string>
    <string name="new_pin1_length_short">New PIN1 is too short (%o characters).\nMinimum number of PIN1 characters is 4.</string>
    <string name="pin1_no_match">\"New PIN1\" and \"New PIN1 again\" are different.</string>
    <string name="pin1_too_easy">PIN1 contains too obvious combination. PIN1 can\'t be 0000 or 1234. Also PIN1 can\'t contain your date of birth.</string>
    <string name="valid_pin_2">Current PIN2 code:</string>
    <string name="valid_pin_2_hint">PIN2</string>
    <string name="pin2_change_success">PIN2 changed successfully</string>
    <string name="pin2_too_easy">PIN2 contains too obvious combination. PIN2 can\'t be 00000 or 12345. Also PIN2 can\'t contain your date of birth.</string>
    <string name="pin2_no_match">\"New PIN2\" and \"New PIN2 again\" are different.</string>
    <string name="new_pin2_length_short">New PIN2 is too short (%o characters). Minimum number of PIN2 characters is 5.</string>
    <string name="pin2_blocked"><b>PIN2 is blocked.</b>\nTo unblock/change PIN2 use PUK code.</string>
    <string name="puk_changing">PUK changing</string>
    <string name="puk_info_title">New PUK code:</string>
    <string name="puk_info"><![CDATA[\u2022 must be different from previous PUK\n\u2022 must be 8–12 digits long and can\'t contain letters.\n\u2022 can\'t be 00000000, 12345678 and can\'t contain your date of birth.]]></string>
    <string name="new_puk_title">New PUK code:</string>
    <string name="new_puk_hint">New PUK</string>
    <string name="new_puk_again_hint">New PUK again</string>
    <string name="new_puk_again_title">New PUK code again:</string>
    <string name="new_puk_length_short">New PUK is too short (%o characters). Minimum number of PUK characters is 8.</string>
    <string name="puk_no_match">\"New PUK\" and \"New PUK again\" are different.</string>
    <string name="puk_too_easy">PUK contains too obvious combination. PUK can\'t be 00000000 or 12345678. Also PUK can\'t contain your date of birth.</string>
    <string name="puk_blocked"><b>PUK is blocked.</b></string>
    <string name="puk_change_failed">PUK change failed</string>
    <string name="puk_change_success">PUK changed successfully</string>
    <string name="puk_warning">If you forget the PUK code or the certificates remain blocked, you have to visit the service center to obtain new codes.</string>
    <string name="warning_card_not_found">ID card is not found.\n\nPlease check if ID card is inserted correctly. New ID cards have chip on the back side of the card.</string>
    <plurals name="pin1_change_failed">
        <item quantity="zero">PIN1 change failed\nPIN is blocked.</item>
        <item quantity="one">PIN1 change failed\nPIN will be locked next failed attempt</item>
        <item quantity="two">PIN1 change failed\nPIN has been entered incorrectly one time</item>
        <item quantity="few">PIN1 change failed\nPIN has been entered incorrectly one time</item>
        <item quantity="other">PIN1 change failed\nPIN has been entered incorrectly one time</item>
    </plurals>
    <plurals name="pin2_change_failed">
        <item quantity="zero">PIN2 change failed\nPIN is blocked.</item>
        <item quantity="one">PIN2 change failed\nPIN will be locked next failed attempt</item>
        <item quantity="two">PIN2 change failed\nPIN has been entered incorrectly one time</item>
        <item quantity="few">PIN2 change failed\nPIN has been entered incorrectly one time</item>
        <item quantity="other">PIN2 change failed\nPIN has been entered incorrectly one time</item>
    </plurals>
    <string name="pref_header_general">General</string>
    <string name="pref_general_title_online_tsl_check">Online TSL digest check</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_header_signing">Signing</string>
    <string name="pref_signing_title_file_type">Default file type</string>
    <string-array name="pref_signing_file_type_names">
        <item>BDOC</item>
        <item>ASiC-E</item>
    </string-array>
    <string-array name="pref_signing_file_type_values">
        <item>time-mark</item>
        <item>time-stamp</item>
    </string-array>
    <string name="pref_title_personal_code">Personal code</string>
    <string name="pref_title_mobile_nr">Mobile number</string>
    <string name="pref_title_signing_role">Role</string>
    <string name="ria_digidoc_version">RIA DigiDoc version 2.0.0.100</string>
    <string name="software_developed_by">ID software is developed by Estonian Information System Authority</string>
    <string name="contact_information">In case of questions contact the ID help-line by e-mail abi@id.ee or call 1777 within Estonia, (+372) 677 3377 abroad.</string>
    <string name="licenses_title">Licenses and components</string>
    <string name="name_of_external_component_or_library">Name of external component or library</string>
    <string name="name_and_version_of_the_license">Name and version of the license</string>
    <string name="https_url_to_component_license_page">https://url.to.component.license.page</string>
</resources>