<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_color_white">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/about_logo_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@android:string/unknownName"
            android:layout_marginTop="@dimen/material_card_actions_row_padding"
            android:src="@drawable/about_logo_estonian" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Application.Subheader.Container"
            android:layout_marginLeft="@dimen/material_content_edge_margin_horizontal"
            android:layout_marginRight="@dimen/material_content_edge_margin_horizontal"
            android:gravity="center"
            android:text="@string/ria_digidoc_version" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/MaterialTypography.Dense.Body1"
            android:layout_marginLeft="@dimen/material_content_edge_margin_horizontal"
            android:layout_marginRight="@dimen/material_content_edge_margin_horizontal"
            android:gravity="center"
            android:paddingBottom="@dimen/material_card_actions_row_padding"
            android:text="@string/software_developed_by" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/MaterialTypography.Dense.Body1"
            android:layout_marginLeft="@dimen/material_content_edge_margin_horizontal"
            android:layout_marginRight="@dimen/material_content_edge_margin_horizontal"
            android:autoLink="email"
            android:gravity="center"
            android:text="@string/contact_information" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Application.Subheader.Container"
            android:layout_marginLeft="@dimen/material_content_edge_margin_horizontal"
            android:layout_marginRight="@dimen/material_content_edge_margin_horizontal"
            android:gravity="center"
            android:textSize="@dimen/material_typography_tall_title_text_size"
            android:text="@string/licenses_title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/material_content_edge_margin_horizontal"
            android:layout_marginRight="@dimen/material_content_edge_margin_horizontal"
            android:gravity="center"
            android:paddingBottom="@dimen/material_card_actions_row_padding"
            android:text="@string/name_of_external_component_or_library"
            android:textAppearance="@style/TextAppearance.Application.Value" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/material_content_edge_margin_horizontal"
            android:layout_marginRight="@dimen/material_content_edge_margin_horizontal"
            android:gravity="center"
            android:paddingBottom="@dimen/material_card_actions_row_padding"
            android:text="@string/name_and_version_of_the_license"
            android:textAppearance="@style/TextAppearance.Application.Value" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/material_content_edge_margin_horizontal"
            android:layout_marginRight="@dimen/material_content_edge_margin_horizontal"
            android:autoLink="web"
            android:gravity="center"
            android:paddingBottom="@dimen/material_card_actions_row_padding"
            android:text="@string/https_url_to_component_license_page"
            android:textAppearance="@style/TextAppearance.Application.Value" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/material_content_edge_margin_horizontal"
            android:layout_marginRight="@dimen/material_content_edge_margin_horizontal"
            android:gravity="center"
            android:paddingBottom="@dimen/material_card_actions_row_padding"
            android:text="@string/name_of_external_component_or_library"
            android:textAppearance="@style/TextAppearance.Application.Value" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/material_content_edge_margin_horizontal"
            android:layout_marginRight="@dimen/material_content_edge_margin_horizontal"
            android:gravity="center"
            android:paddingBottom="@dimen/material_card_actions_row_padding"
            android:text="@string/name_and_version_of_the_license"
            android:textAppearance="@style/TextAppearance.Application.Value" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/material_content_edge_margin_horizontal"
            android:layout_marginRight="@dimen/material_content_edge_margin_horizontal"
            android:autoLink="web"
            android:gravity="center"
            android:paddingBottom="@dimen/material_card_actions_row_padding"
            android:text="@string/https_url_to_component_license_page"
            android:textAppearance="@style/TextAppearance.Application.Value" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/material_content_edge_margin_horizontal"
            android:layout_marginRight="@dimen/material_content_edge_margin_horizontal"
            android:gravity="center"
            android:paddingBottom="@dimen/material_card_actions_row_padding"
            android:text="@string/name_of_external_component_or_library"
            android:textAppearance="@style/TextAppearance.Application.Value" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/material_content_edge_margin_horizontal"
            android:layout_marginRight="@dimen/material_content_edge_margin_horizontal"
            android:gravity="center"
            android:paddingBottom="@dimen/material_card_actions_row_padding"
            android:text="@string/name_and_version_of_the_license"
            android:textAppearance="@style/TextAppearance.Application.Value" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/material_content_edge_margin_horizontal"
            android:layout_marginRight="@dimen/material_content_edge_margin_horizontal"
            android:autoLink="web"
            android:gravity="center"
            android:paddingBottom="@dimen/material_card_actions_row_padding"
            android:text="@string/https_url_to_component_license_page"
            android:textAppearance="@style/TextAppearance.Application.Value" />
    </LinearLayout>
</ScrollView>